--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -19,6 +21,22 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "husky": "^8.0.0",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.0.3",
     "typescript": "4.8.3"
-  }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "prettier --write"
+    ],
+    "*.{yml,json,md}": [
+      "prettier --write"
+    ]
+  },
+  "pre-commit": [
+    "lint-staged",
+    "lint",
+    "test"
+  ]
 }
